# Nyxbid

./: .env.example  .gitignore  Cargo.toml  PROGRESS.md  PROJECT.md  README.md  docker-compose.yml  justfile
apps/client/: Dockerfile  package.json
apps/client/app/: globals.css  layout.tsx  page.tsx
apps/client/app/(dashboard)/: error.tsx  layout.tsx
apps/client/app/(dashboard)/agents/: loading.tsx  page.tsx
apps/client/app/(dashboard)/dashboard/: loading.tsx  page.tsx
apps/client/app/(dashboard)/fills/: page.tsx
apps/client/app/(dashboard)/intents/: loading.tsx  page.tsx
apps/client/app/(dashboard)/intents/[id]/: loading.tsx  page.tsx
apps/client/app/(dashboard)/policies/: loading.tsx  page.tsx
apps/client/app/(dashboard)/quotes/: loading.tsx  page.tsx
apps/client/app/(dashboard)/receipts/: loading.tsx  page.tsx
apps/client/app/(dashboard)/trade/: loading.tsx  page.tsx
apps/client/app/(marketing)/: layout.tsx  page.tsx
apps/client/app/(marketing)/docs/: _components.tsx  _copy-button.tsx  _sidebar.tsx  layout.tsx  page.tsx
apps/client/app/(marketing)/docs/agents/: page.tsx
apps/client/app/(marketing)/docs/makers/: page.tsx
apps/client/app/(marketing)/docs/takers/: page.tsx
apps/client/app/agents/: page.tsx
apps/client/app/policies/: page.tsx
apps/client/app/receipts/: page.tsx
apps/client/components/: action-button.tsx  brand.tsx  countdown.tsx  error-boundary.tsx  icons.tsx  intent-detail.tsx  live-dashboard.tsx  live-fills-table.tsx  live-intents-table.tsx  live-receipts.tsx  maker-inbox.tsx  mobile-nav.tsx  page-header.tsx  pagination.tsx  phase.tsx  sidebar.tsx  skeleton.tsx  stat-card.tsx  status-dot.tsx  status-pill.tsx  toast.tsx  trade-form.tsx  wallet-button.tsx  wallet-provider.tsx
apps/client/hooks/: use-live-list.ts  use-nyxbid-tx.ts  use-sse.ts  use-ws.ts
apps/client/lib/: api.ts  commitment.ts  data.ts  format.ts  tx-errors.ts
apps/server/: Cargo.toml  Dockerfile  userdata.sh
apps/server/src/: a2a.rs  auction.rs  indexer.rs  intent.rs  main.rs  mcp.rs  mock.rs  routes.rs  solana.rs  state.rs  store.rs  tx.rs  url_privacy.rs  x402.rs
apps/server/src/a2a/: card.rs  jws.rs  mod.rs  push.rs  rpc.rs  skills.rs  tasks.rs  types.rs
chain/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
chain/neurocracy/: Anchor.toml  rust-toolchain.toml
chain/neurocracy/programs/neurocracy/: Cargo.toml
chain/neurocracy/programs/neurocracy/src/: lib.rs
chain/neurocracy/tests/: neurocracy.ts
chain/programs/nyxbid/: Cargo.toml
chain/programs/nyxbid/src/: error.rs  events.rs  instructions.rs  lib.rs  state.rs
chain/programs/nyxbid/src/instructions/: cancel.rs  create_intent.rs  expire.rs  expire_no_maker.rs  expire_with_maker.rs  fund_maker_escrow.rs  resolve_auction.rs  reveal_quote.rs  settle.rs  submit_quote.rs
chain/programs/nyxbid/tests/: smoke.rs
chain/programs/nyxbid/tests/common/: mod.rs
chain/programs/payq/: Cargo.toml
chain/programs/payq/src/: errors.rs  events.rs  lib.rs  state.rs
chain/programs/payq/src/instructions/: close_vault.rs  initialize_vault.rs  mod.rs  record_spend.rs  update_vault.rs
chain/tests/: 00-smoke.test.ts  01-happy-path-buy.test.ts  02-happy-path-sell.test.ts  03-best-bid-selection.test.ts  04-failure-paths.test.ts  05-recovery-paths.test.ts  06-helper-regression.test.ts  payq.ts
chain/tests/helpers/: lifecycle.ts  setup.ts
crates/nyxbid-program/: Cargo.toml
crates/nyxbid-program/idl/: nyxbid.json
crates/nyxbid-program/src/: discriminator.rs  error.rs  events.rs  id.rs  lib.rs  params.rs  pda.rs  seeds.rs  state.rs
crates/nyxbid-types/: Cargo.toml
crates/nyxbid-types/src/: lib.rs
crates/payq-types/: Cargo.toml
crates/payq-types/src/: lib.rs
deploy/: AGENT_E2E.md  Caddyfile  README.md
scripts/: restart-server.sh
