[package]
name = "nyxbid-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bincode = "1.3"
borsh = "1.6.1"
bs58 = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3.32"
hex = "0.4.3"
nyxbid-program = { path = "../../crates/nyxbid-program" }
nyxbid-types = { path = "../../crates/nyxbid-types" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = "3.1.2"
solana-account = "3"
solana-client = "3.1.12"
solana-commitment-config = "3"
solana-hash = "3"
solana-instruction = { version = "3", features = ["serde", "borsh", "bincode"] }
solana-keypair = { version = "3", features = ["seed-derivable"] }
solana-message = { version = "3", features = ["serde", "bincode"] }
solana-pubkey = { version = "3", features = ["serde", "borsh"] }
solana-signature = { version = "3", features = ["serde"] }
solana-system-interface = "3"
solana-transaction = { version = "3", features = ["serde", "bincode", "blake3"] }
solana-transaction-error = "3"
solana-transaction-status-client-types = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
