[package]
name = "nyxbid-program"
version = "0.1.0"
edition = "2024"
description = "On-chain wire types, discriminators, and PDA helpers for the Nyxbid Anchor program."
license = "Apache-2.0"

[dependencies]
borsh = { version = "1.6", features = ["derive"] }
solana-pubkey = { version = "3", features = ["serde", "borsh", "curve25519"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
