[package]
name = "nyxbid"
version = "0.1.0"
description = "Nyxbid: sealed-bid RFQ venue on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nyxbid"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
solana-sha256-hasher = "3.1.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints]
workspace = true
